[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/stage/robot/robot.gd" type="Script" id=1]
[ext_resource path="res://models/robot_0.obj" type="ArrayMesh" id=2]
[ext_resource path="res://models/default_material.tres" type="Material" id=3]
[ext_resource path="res://models/robot_1.obj" type="ArrayMesh" id=4]
[ext_resource path="res://models/robot_2.obj" type="ArrayMesh" id=5]
[ext_resource path="res://models/robot_3.obj" type="ArrayMesh" id=6]

[node name="Robot" type="Spatial"]
script = ExtResource( 1 )

[node name="robot_0" type="MeshInstance" parent="."]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )

[node name="robot_1" type="MeshInstance" parent="."]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 0, 0 )
visible = false
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="robot_2" type="MeshInstance" parent="."]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 0, 0 )
visible = false
mesh = ExtResource( 5 )
material/0 = ExtResource( 3 )

[node name="robot_3" type="MeshInstance" parent="."]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 0, 0 )
visible = false
mesh = ExtResource( 6 )
material/0 = ExtResource( 3 )

